# ffnt

./: Cargo.toml  Changes.md  Readme.md
benches/: benchmark.rs
examples/: add_all.rs  add_all_32.rs  add_ptimes.rs  add_ptimes_32.rs  factorial.rs  factorial_32.rs
src/: lib.rs  num_traits.rs  parse_err.rs  rand.rs  z32.rs  z64.rs
