[package]
name = "galois-fields"
version = "0.1.0"
edition = "2021"
description = "Finite field arithmetic"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
license = "GPL-3.0-or-later"
readme = "Readme.md"
keywords = []
categories = ["Mathematics"]

[dependencies]

[dev-dependencies]
once_cell = "1.13"
rand = "0.8"
rand_xoshiro = "0.6"
