[package]
name = "ffnt"
version = "0.5.0"
edition = "2021"
description = "Finite field arithmetic"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
license = "GPL-3.0-or-later"
readme = "Readme.md"
keywords = []
categories = ["Mathematics"]

[dependencies]
num-traits = { version = "0.2", optional = true }
paste = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
once_cell = "1.13"
rand = "0.8"
rand_xoshiro = "0.6"
rug = { version = "1.16", default-features = false, features = ["gmp-mpfr-sys", "integer"] }

[features]
num-traits = ["dep:num-traits", "dep:paste"]
rand = ["dep:rand", "dep:paste"]

[[bench]]
name = "benchmark"
harness = false
